[package]
name = "epd2in9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3 = { version = "0.20.0" , optional = true}
hal = { package = "esp32c3-hal", version = "0.14.0" , optional = true}
esp-backtrace = { version = "0.9.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] , optional = true}
esp-println       = { version = "0.8.0", features = ["esp32c3"] , optional = true}
embedded-graphics = {version= "0.8.1",features = ["fixed"] }
embedded-graphics-core = { version = "0.4.0" }
embedded-hal = {version = "0.2.7" }
embedded-alloc = { version = "0.5"}
epd-waveshare ={path = "epd-waveshare-0.5.0"}
embedded-graphics-simulator = { version = "0.6.0" ,optional = true}


[features]
esp = ["esp32c3","hal","esp-backtrace","esp-println"]



pc = ["embedded-graphics-simulator"]